[tool.poetry]
name = "chronotorch"
version = "0.0.0"
description = "A low-level deep learning time series library"
authors = ["Your Name <you@example.com>"]
license = "GPL v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
lightning = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
